# solana-cnft-fractionalizer

./: Anchor.toml  amman.config.js  package.json  pnpm-lock.yaml  tsconfig.json
clients/js/: .env  jest.config.js  package.json  pnpm-lock.yaml  tsconfig.json
clients/js/tests/: cnft_fractionalizer.ts
programs/cnft_fractionalization/: Cargo.toml
programs/cnft_fractionalization/src/: lib.rs
scripts/: download-programs.sh  validator.sh
tests/: cnft_fractionalizer.ts
