[package]
name = "cnft_fractionalizer"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "cnft_fractionalizer"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.28.0"
anchor-spl = "0.28.0"
solana-program = "=1.16.8"
mpl-bubblegum = "1.4.0"
spl-account-compression = { version = "0.3.0", features = ["no-entrypoint"] }
